# wavyte

./: .gitignore  AGENT.md  Cargo.toml  EXPLANATION.md  PERF_BASELINE.md  README.md  REVIEW_1.md  REVIEW_2.md  TASKS.md  v02_shortlisted_fixes.md  wavyte_v03_imp_guideline.md  wavyte_v03_proposal.md  wavyte_v03_proposal_final.md
bench/: Cargo.toml
bench/src/: main.rs
examples/: assets_smoke.rs  build_dsl_and_dump_json.rs  eval_frames.rs  render_aesthetic_motion_mp4.rs  render_blur_png.rs  render_crossfade_png.rs  render_one_frame.rs  render_parity.rs  render_remotion_hello_world_mp4.rs  render_svg_fade_mp4.rs  render_to_mp4.rs
examples/support/: mod.rs
scripts/: forbid_string_maps.sh  verify_release.sh
src/: anim.rs  anim_ease.rs  anim_proc.rs  asset_store.rs  assets.rs  assets_decode.rs  compile.rs  composite_cpu.rs  core.rs  dsl.rs  encode_ffmpeg.rs  eval.rs  fingerprint.rs  guide.rs  lib.rs  model.rs  pipeline.rs  render.rs  render_cpu.rs  render_passes.rs  render_vello.rs  svg_raster.rs  transitions.rs
src/animation/: ops.rs  proc.rs
src/assets/: decode.rs  media.rs  store.rs  svg_raster.rs
src/audio/: mix.rs
src/composition/: dsl.rs  eval.rs  layout.rs  model.rs
src/foundation/: error.rs
src/render/: backend.rs  blur.rs  compile.rs  composite.rs  cpu.rs  encode_ffmpeg.rs  fingerprint.rs  fx.rs  passes.rs  pipeline.rs
tests/: assets_cache.rs  cli_smoke.rs  eval_snapshot.rs  json_validate.rs  media_pipeline.rs  render_cpu.rs  render_cpu_svg.rs  render_gpu.rs  render_gpu_blur.rs  render_parallel_parity.rs  render_parity.rs  render_svg_text.rs
tests/data/: simple_comp.json
wavyte/: Cargo.toml
wavyte-cli/: Cargo.toml
wavyte-cli/src/: main.rs
wavyte-cli/tests/: cli_smoke.rs
wavyte-core/: Cargo.toml
wavyte-core/examples/: render_aesthetic_layout_mp4.rs  render_crossfade_png.rs  render_full_gamut_media_layout_mp4.rs  render_one_frame.rs  render_svg_fade_mp4.rs  render_to_mp4.rs
wavyte-core/src/: lib.rs
wavyte-core/src/animation/: anim.rs  ease.rs  ops.rs  proc.rs
wavyte-core/src/assets/: decode.rs  media.rs  store.rs  svg_raster.rs
wavyte-core/src/audio/: mix.rs
wavyte-core/src/compile/: fingerprint.rs  plan.rs
wavyte-core/src/composition/: dsl.rs  mod.rs  model.rs
wavyte-core/src/effects/: blur.rs  composite.rs  fx.rs  mod.rs  transitions.rs
wavyte-core/src/encode/: ffmpeg.rs
wavyte-core/src/eval/: evaluator.rs  mod.rs
wavyte-core/src/foundation/: core.rs  error.rs  math.rs
wavyte-core/src/layout/: solver.rs
wavyte-core/src/render/: backend.rs  cpu.rs  passes.rs  pipeline.rs
wavyte-core/src/transform/: affine.rs  linear.rs  mod.rs  non_linear.rs
wavyte-core/tests/: eval_snapshot.rs  render_svg_text.rs  svg_text_fixture.rs  text_font_identity.rs
wavyte-core/tests/unit/animation/: ease.rs  ops.rs  proc.rs
wavyte-core/tests/unit/assets/: decode.rs  store.rs
wavyte-core/tests/unit/compile/: fingerprint.rs
wavyte-core/tests/unit/composition/: model.rs
wavyte-core/tests/unit/effects/: composite.rs  transitions.rs
wavyte-core/tests/unit/foundation/: error.rs
wavyte-std/: Cargo.toml
wavyte-std/src/: lib.rs
wavyte/examples/: render_aesthetic_fx_mp4.rs  v03_render_mp4.rs  v03_render_png.rs
wavyte/src/: guide.rs  lib.rs
wavyte/src/animation/: anim.rs  mod.rs  ops.rs  proc.rs
wavyte/src/assets/: color.rs  decode.rs  media.rs  mod.rs  store.rs  svg_raster.rs
wavyte/src/audio/: manifest.rs  mix.rs  mod.rs
wavyte/src/compile/: compiler.rs  fingerprint.rs  fuse.rs  mod.rs  plan.rs
wavyte/src/composition/: mod.rs  model.rs
wavyte/src/effects/: binding.rs  mod.rs  transitions.rs
wavyte/src/encode/: ffmpeg.rs  sink.rs
wavyte/src/eval/: context.rs  evaluator.rs  mod.rs  properties.rs  time.rs  visibility.rs
wavyte/src/expression/: ast.rs  bind.rs  bytecode.rs  compile.rs  error.rs  lexer.rs  lower.rs  parser.rs  perf.rs  program.rs  vm.rs
wavyte/src/foundation/: alloc_track.rs  core.rs  math.rs  mod.rs
wavyte/src/layout/: cache.rs  solver.rs  taffy_bridge.rs
wavyte/src/normalize/: intern.rs  ir.rs  mod.rs  pass.rs  property.rs
wavyte/src/render/: backend.rs  cpu.rs  mod.rs  passes.rs  pipeline.rs  scheduler.rs  surface_pool.rs
wavyte/src/scene/: composition.rs  mod.rs  model.rs
wavyte/src/schema/: mod.rs  validate.rs
wavyte/src/session/: render_session.rs
wavyte/src/transform/: non_linear.rs
wavyte/src/v03/: mod.rs
wavyte/src/v03/animation/: anim.rs  mod.rs
wavyte/src/v03/audio/: manifest.rs  mix.rs  mod.rs
wavyte/src/v03/compile/: compiler.rs  fingerprint.rs  fuse.rs  plan.rs
wavyte/src/v03/effects/: binding.rs
wavyte/src/v03/encode/: ffmpeg.rs  mod.rs  sink.rs
wavyte/src/v03/eval/: evaluator.rs  mod.rs  properties.rs  time.rs  visibility.rs
wavyte/src/v03/expression/: ast.rs  bind.rs  bytecode.rs  compile.rs  lexer.rs  lower.rs  mod.rs  parser.rs  perf.rs  program.rs  vm.rs
wavyte/src/v03/foundation/: ids.rs  mod.rs
wavyte/src/v03/layout/: mod.rs  taffy_bridge.rs
wavyte/src/v03/normalize/: intern.rs  ir.rs  mod.rs  pass.rs  property.rs
wavyte/src/v03/render/: backend.rs  cpu.rs  mod.rs  scheduler.rs  surface_pool.rs
wavyte/src/v03/scene/: composition.rs  model.rs
wavyte/src/v03/schema/: validate.rs  version.rs
wavyte/src/v03/session/: mod.rs  render_session.rs
wavyte/tests/: asset_store.rs  v03_json_fixtures.rs  v03_render_smoke.rs
wavyte/tests/data/v03/: minimal_solid.json  moving_opacity.json  text_basic.json
wavyte/tests/unit/animation/: anim.rs
wavyte/tests/unit/assets/: media.rs  store.rs
wavyte/tests/unit/audio/: mix.rs
wavyte/tests/unit/compile/: plan.rs
wavyte/tests/unit/composition/: dsl.rs
wavyte/tests/unit/effects/: blur.rs  fx.rs
wavyte/tests/unit/encode/: ffmpeg.rs
wavyte/tests/unit/eval/: evaluator.rs
wavyte/tests/unit/foundation/: core.rs  math.rs
wavyte/tests/unit/layout/: solver.rs
wavyte/tests/unit/render/: passes.rs
