[package]
name = "wavyte-cli"
version = "0.2.1"
edition = "2024"
rust-version = "1.93"
publish = false

[[bin]]
name = "wavyte"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.57", features = ["derive"] }
image = "0.25.9"
serde_json = "1"
sha2 = "0.10.8"
usvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
wavyte = { path = "../wavyte" }
